src/test/ui/const-generics/fn-const-param-call.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/fn-const-param-call.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-call.rs:8:25
   |
LL | struct Wrapper<const F: fn() -> u32>;
   |                         ^^^^^^^^^^^

error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-call.rs:10:15
   |
LL | impl<const F: fn() -> u32> Wrapper<F> {
   |               ^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

